--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       href="./images/favicon-32x32.png"
     />
     <title>Bookmark landing page</title>
-    <!-- <link
-      rel="stylesheet"
-      href="styles.css"
-    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,11 +19,11 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="font-rubik min-h-screen transition-all">
     <main class="w-[80%] mx-auto py-4">
       <!-- Header -->
       <header>
-        <nav class="flex items-center justify-between py-2">
+        <nav class="flex items-center justify-between py-2 w-full">
           <div>
             <img
               src="./images/logo-bookmark.svg"
@@ -61,7 +57,7 @@
               >
             </li>
             <li
-              class="bg-primaryred hover:border hover:border-primaryred hover:bg-white py-1 px-4 rounded shadow-md"
+              class="bg-primaryred border hover:border hover:border-primaryred hover:bg-white py-1 px-4 rounded shadow-md"
             >
               <a
                 href="#"
@@ -74,38 +70,43 @@
       </header>
 
       <!-- Hero section -->
-      <section class="flex py-8">
-        <div>
-          <div>
-            <h1>
+      <section class="flex flex-col-reverse lg:flex-row py-8 gap-4">
+        <!-- Short Description -->
+        <div class="py-4 lg:w-[50%]">
+          <div class="flex flex-col space-y-4 items-center lg:items-start">
+            <h1 class="text-3xl font-medium text-center lg:text-left">
               A simple Bookmark<br />
               Manager
             </h1>
-            <p>
+            <p class="text-neutralgrayblue text-center lg:text-left xl:w-[70%]">
               A clean and simple interface to organize your favourite websites.
               Open a new browser tab and see your sites load instantly. Try it
               for free.
             </p>
-            <div>
-              <button class="bg-primaryblue">Get it on Chrome</button>
-              <button class="bg-gray-100 shadow-md">Get it on Firefox</button>
+            <div class=" flex items-center space-x-4">
+              <button class="bg-primaryblue text-white px-2 py-2 lg:px-4 text-sm rounded cursor-pointer hover:text-primaryblue hover:
+              border-primaryblue border hover:border hover:bg-white font-medium">Get it on Chrome</button>
+              <button class="bg-white text-neutraldarkblue font-medium shadow-md hover:border hover:border-neutraldarkblue
+              hover:text-neutraldarkblue border cursor-pointer px-2 py-2 lg:px-4 rounded text-sm">Get it on Firefox</button>
             </div>
           </div>
         </div>
-        <div class="w-full">
+        <!-- Hero Image -->
+        <div class="flex-1">
           <div
-            class="absolute h-40 rounded-full w-1/2 r-0 b-0 bg-primaryblue"
+            class="absolute h-40 rounded-l-full  top-40 right-0 w-[80%] md:h-64 md:top-72 
+            bg-primaryblue lg:w-[40%] lg:top-40 xl:w-[30%] xl:top-52"
           ></div>
           <img
             src="./images/illustration-hero.svg"
             alt="Hero Image"
-            class="relative z-2"
+            class="relative z-2 object-cover w-full h-full"
           />
         </div>
       </section>
 
       <!-- Features section -->
-      <section>
+      <!-- <section>
         <div>
           <h2>Features</h2>
           <p>
@@ -138,21 +139,21 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Download Section -->
-      <section>
+      <!-- <section>
         <div>
           <h2>Download the extension</h2>
           <p>
             We've got more browsers in the pipeline. Please do let us know if
             you've got a favourite you'd like us to prioritize.
           </p>
-        </div>
+        </div> -->
         <!-- Cards container -->
-        <div>
+        <!-- <div> -->
           <!-- /Cards -->
-          <div>
+          <!-- <div>
             <div>
               <img src="./images/logo-chrome.svg" alt="Chrome Logo" />
             </div>
@@ -195,10 +196,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- FAQ Section -->
-       <section>
+       <!-- <section>
         <div>
           <h2>
             Frequently Asked Questions
@@ -236,10 +237,10 @@
         <div>
           <button class="bg-primaryblue text-white">More Info</button>
         </div>
-       </section>
+       </section> -->
 
       <!-- Contact Section -->
-       <section class="bg-primaryblue p-4">
+       <!-- <section class="bg-primaryblue p-4">
         <div>
           <p>
             35,000+ already joined
@@ -252,11 +253,11 @@
             <button class="bg-primaryred text-white">Contact Us</button>
           </div>
         </div>
-       </section>
+       </section> -->
 
       <!-- Footer -->
 
-      <footer class="bg-neutraldarkblue">
+      <!-- <footer class="bg-neutraldarkblue">
         <nav>
           <div>
             <img src="./images/logo-bookmark.svg" alt="Logo">
@@ -285,7 +286,7 @@
             </a>
           </li>
         </ul>
-      </footer>
+      </footer> -->
 
     </main>
 
